--- a/package.json
+++ b/package.json
@@ -4,27 +4,39 @@
   "description": "Will App - Development",
   "main": "gulpfile.js",
   "dependencies": {
+    "browser-sync": "^2.18.2",
     "gulp": "^3.9.1"
   },
   "devDependencies": {
     "browser-sync": "^2.17.3",
+    "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-clean-css": "^2.0.13",
+    "gulp-concat": "^2.6.1",
     "gulp-concat-css": "^2.3.0",
     "gulp-dependencies": "^0.1.1",
-    "gulp-imagemin": "^3.0.3",
-    "gulp-jshint": "^2.0.1",
+    "gulp-imagemin": "^3.1.1",
+    "gulp-jshint": "^2.0.4",
     "gulp-notify": "^2.2.0",
     "gulp-nunjucks-render": "^2.0.0",
     "gulp-plumber": "^1.1.0",
     "gulp-sass": "^2.3.2",
-    "gulp-sourcemaps": "^2.0.1",
+    "gulp-sourcemaps": "^2.2.1",
     "gulp-uglify": "^2.0.0",
-    "jshint": "^2.9.3"
+    "jshint": "^2.9.4",
+    "pump": "^1.0.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/manchesteroutsourcing/willapp16.git"
+  },
+  "bugs": {
+    "url": "https://github.com/manchesteroutsourcing/willapp16/issues"
+  },
+  "homepage": "https://github.com/manchesteroutsourcing/willapp16#readme"
 }
